--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
 
-
-<div id="map"></div>
-    
+  <div style="display:flex;justify-content: end;">
+  <h1>Tracking location</h1>
+ <button id="start">start</button>
+ <button id="end">end</button>
+</div> 
+ <div id="map"></div>
+   
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
     <script src="App.js"></script>
 </body>
